--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ body {
   gap: 1.2rem;
   border-radius: 9px;
   background-color: var(--grey-lightest);
+  overflow: hidden;
 }
 
 .amount-change,
@@ -240,6 +241,16 @@ body {
   font-size: 2.4rem;
   color: var(--shade-darkest);
   padding: 0.8rem;
+}
+
+.amount-change {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.amount-change:hover {
+  background-color: var(--grey-light);
+  color: white;
 }
 
 .amount {
@@ -254,6 +265,12 @@ body {
   font-size: 1.2rem;
   padding: 0 4.8rem;
   border-radius: 9px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.add-to-cart:hover {
+  background-color: var(--shade-darkest);
 }
 
 .btn-flex {
