--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ body {
 
 .regular-price {
   color: var(--grey-light);
+  text-decoration-line: line-through;
 }
 
 .purchase-box {
@@ -268,6 +269,9 @@ body {
   border-radius: 9px;
   cursor: pointer;
   transition: all 0.4s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .add-to-cart:hover {
@@ -344,4 +348,166 @@ body {
 .modal .item-img--main {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 1052px) {
+  html {
+    font-size: 50%;
+  }
+
+  .item-img--main {
+    width: 39rem;
+    height: 39rem;
+  }
+}
+
+@media (max-width: 829px) {
+  html {
+    font-size: 40%;
+  }
+
+  .item-img--main {
+    width: 44rem;
+    height: 44rem;
+  }
+}
+
+@media (max-width: 829px) {
+  html {
+    font-size: 30%;
+  }
+
+  .item-img--main {
+    width: 50rem;
+    height: 50rem;
+  }
+}
+
+@media (max-width: 425px) {
+  html {
+    font-size: 50%;
+  }
+
+  .container {
+    margin: 0 2.4rem;
+  }
+
+  .the-page {
+    width: 40rem;
+    border-radius: 0;
+  }
+
+  /* HEADER */
+  .header {
+    margin-bottom: 0;
+  }
+
+  .header .container {
+    border: none;
+    gap: 1.6rem;
+    padding: 2.4rem 0;
+  }
+
+  .hamburger-line {
+    width: 1.9rem;
+    height: 0.4rem;
+    background-color: var(--grey-light);
+    margin: 0.3rem 0;
+  }
+
+  .nav-list {
+    gap: 1.6rem;
+  }
+
+  .nav-link:not(#logo):not(.cart) {
+    display: none;
+  }
+
+  .cart {
+    font-size: 3rem;
+  }
+
+  .profile-img {
+    width: 3.2rem;
+    height: 3.2rem;
+  }
+
+  /* MAIN */
+  .main {
+    margin: 0;
+  }
+
+  .main .container {
+    flex-direction: column;
+    gap: 0;
+    margin: 0;
+  }
+
+  .item-img--main {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1.6rem;
+    border-radius: 0px;
+    cursor: pointer;
+  }
+
+  .images-small {
+    display: none;
+  }
+
+  .item-box {
+    margin: 0 2.4rem;
+  }
+
+  .item-desc {
+    font-size: 1.6rem;
+    line-height: 1.8;
+  }
+
+  .price-box {
+    width: 100%;
+    display: flex;
+    gap: 1.6rem;
+    margin-bottom: 2.4rem;
+  }
+
+  .current-price {
+    font-size: 3rem;
+  }
+
+  .discount {
+    font-size: 1.6rem;
+  }
+
+  .regular-price {
+    margin-left: auto;
+    font-size: 1.6rem;
+  }
+
+  .purchase-box {
+    flex-direction: column;
+  }
+
+  .amount-selection {
+    justify-content: space-between;
+  }
+
+  .amount-change,
+  .amount {
+    padding: 1.2rem;
+  }
+
+  .amount {
+    font-size: 2rem;
+  }
+
+  .add-to-cart {
+    font-size: 1.8rem;
+    padding: 2.4rem 0;
+    margin-bottom: 9.6rem;
+  }
+
+  .btn-flex ion-icon {
+    font-size: 2.4rem;
+  }
 }
