Don't show modal in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ body {
     height: 100%;
     margin-bottom: 1.6rem;
     border-radius: 0px;
-    cursor: pointer;
+    cursor: default;
   }
 
   .images-small {
