--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 1.6rem;
 }
 
 .item-img-small {
@@ -168,7 +169,7 @@ body {
 
 .item-img-small:hover {
   border: 3px solid var(--shade-darkest);
-  opacity: 0.3;
+  /* opacity: 0.3; */
 }
 
 .item-box {
@@ -309,7 +310,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.7);
+  transform: translate(-50%, -50%) scale(1.8);
   z-index: 10;
 }
 
@@ -319,8 +320,8 @@ body {
   color: white;
   background-color: rgba(0, 0, 0, 0);
   border: none;
-  font-size: 3.6rem;
-  padding: 1.2rem 0;
+  font-size: 2.4rem;
+  padding: 0.8rem 0;
   cursor: pointer;
 }
 
@@ -334,8 +335,8 @@ body {
 
 .modal ion-icon {
   position: absolute;
-  width: 6.4rem;
-  height: 6.4rem;
+  width: 2.8rem;
+  height: 2.8rem;
   fill: white;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -343,7 +344,7 @@ body {
 }
 
 .modal .images-small {
-  padding: 3.2rem 3.2rem;
+  /* padding: 3.2rem 3.2rem; */
 }
 
 .modal .item-img--main {
