--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,37 @@ body {
 /* MAIN */
 .main {
   margin: 0 3.6rem;
+  position: relative;
+}
+
+.hamburger-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+}
+
+.hamburger-item:link,
+.hamburger-item:visited {
+  text-decoration: none;
+  font-size: 2.4rem;
+  color: var(--grey-darkest);
+  background-color: var(--grey-lightest);
+  opacity: 0.9;
+  width: 100%;
+  text-align: center;
+  padding: 1.6rem 0;
+  transition: all 0.3s;
+}
+
+.hamburger-item:hover,
+.hamburger-item:active {
+  background-color: var(--primary-color);
+  color: var(--grey-lightest);
 }
 
 .main .container {
@@ -318,7 +349,7 @@ body {
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
