--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,26 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .add-to-cart:hover {
   background-color: var(--shade-darkest);
+}
+
+.add-to-cart:hover .tooltip {
+  visibility: visible;
+}
+
+.tooltip {
+  visibility: hidden;
+  position: absolute;
+  transform: translateY(-100%);
+  background-color: var(--grey-darkest);
+  opacity: 0.7;
+  padding: 1.6rem 3.2rem;
+  font-size: 1.6rem;
+  border-radius: 9px;
 }
 
 .btn-flex {
