--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,13 @@ body {
   position: relative;
 }
 
-.add-to-cart:hover {
+.add-to-cart:link,
+.add-to-cart:visited {
+  text-decoration: none;
+}
+
+.add-to-cart:hover,
+.add-to-cart:active {
   background-color: var(--shade-darkest);
 }
 
@@ -419,6 +425,14 @@ body {
 .modal .item-img--main {
   width: 100%;
   height: 100%;
+}
+
+/* CHECKOUT */
+.product-details {
+  display: flex;
+  flex-direction: column;
+  gap: 4.8rem;
+  font-size: 3rem;
 }
 
 @media (max-width: 1052px) {
