--- a/css/style.css
+++ b/css/style.css
@@ -340,19 +340,14 @@ body {
   background-color: var(--shade-darkest);
 }
 
-.add-to-cart:hover .tooltip {
-  visibility: visible;
+.amount-total {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .tooltip {
-  visibility: hidden;
-  position: absolute;
-  transform: translateY(-100%);
-  background-color: var(--grey-darkest);
-  opacity: 0.7;
-  padding: 1.6rem 3.2rem;
-  font-size: 1.6rem;
-  border-radius: 9px;
+  font-size: 2.4rem;
 }
 
 .btn-flex {
@@ -597,6 +592,9 @@ body {
   .add-to-cart {
     font-size: 1.8rem;
     padding: 2.4rem 0;
+  }
+
+  .amount-total {
     margin-bottom: 9.6rem;
   }
 
